--- a/style.css
+++ b/style.css
@@ -1011,6 +1011,8 @@ html, body { overflow-x: hidden; }
   width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.2);
   box-sizing: border-box;
+  visibility: visible;
+  opacity: 1;
 }
 
 .style-pills .pill {
